filter items and overflow fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,17 +40,24 @@ div.main-content {
   width: 100%;
 }
 
+#seg-left {
+  overflow-y: auto;
+}
+
 h1#logo {
   font-size: 1.5em;
 }
 
-.listing {
+.no-margin {
   margin: 0 !important;
+}
+
+.full-height {
   height: 100% !important;
 }
 
-.no-margin {
-  margin: 0 !important;
+.autoscroll {
+  overflow: auto;
 }
 
 #col-left {
